chore: mockkStatic 을 사용하기 위한 설정 추가